--- a/json/projects.json
+++ b/json/projects.json
@@ -4,9 +4,12 @@
         "title": "Kyoto",
         "splashImage": "kyoto.jpg",
         "education": "Multimediedesigner",
-        "weeks": 2,
+        "weeks": "2 uger",
         "thumbnail": "kyoto_thumbnail.jpg",
-        "url": "https://sebstorm.dk/kea/html/uge39/kyoto/site/index.html",
+        "url": {
+            "url": "https://sebstorm.dk/kea/html/uge39/kyoto/site/index.html",
+            "text": "Gå til Kyoto"
+        },
         "stack": "HTML & CSS",
         "purpose": "På 1 semester på multimediedesigner havde vi en opgave, hvor vi skulle redesigne en løsning. Løsningen skulle være responsiv og indeholde de informationer som allerede var på siden , men gerne være helt nyt i forhold til design og organisering af informationerne. Løsning skulle tage udgangspunkt i en analyse af det eksisterende site samt en test af websiden. Projektet skal ligeledes afsluttes med en test af jeres redesignede website. Vi gik efter en minimalistisk og kortfattet løsning med relevante informationer. Intentionen var at få kunderne ned i butikken og følge dem på de sociale medier og at man kan se hvad for noget tøj de i butikken har. Der skulle skabes en rød tråd på de forskellige sider på hjemmesiden, samt skabe en identitetsfarve til Kyoto, da deres nuværende faldt igennem"
 
@@ -16,9 +19,12 @@
         "title": "Sex & Samfund",
         "splashImage": "samfund.jpg",
         "education": "Multimediedesigner",
-        "weeks": 2,
+        "weeks": "2 uger",
         "thumbnail": "samfund_thumbnail.jpg",
-        "url": "http://sebstorm.dk/kea/animation/animation_projekt/index.html",
+        "url": {
+            "url": "http://sebstorm.dk/kea/animation/animation_projekt/index.html",
+            "text": "Gå til Sex & Samfund"
+        },
         "stack": "HTML, Javascript & CSS",
         "purpose": "På 1. semester skulle vi lave en animation for sex & samfund, som skulle sætte fokus på ældre mennesker seksualitet. Det er meningen at læger og sundhedspersonale skal kunne bruge animation sammen med sex & samfund’s oplysningsplakat. Derudover skulle den inspirerer lægen/sundhedsprofessionelle til at bryde tavsheden og spørge ind til borgerens seksualitet og seksuelle sundhed og trivsel. Fra et kodeperspektiv var formålet at lære de forskellige CSS og javascript animationer."
     },
@@ -27,9 +33,12 @@
         "title": "Verdenshjørnet",
         "splashImage": "verdenshjornet.jpg",
         "education": "Multimediedesigner",
-        "weeks": 3,
+        "weeks": "2 uger",
         "thumbnail": "verdenshjornet_thumbnail.jpg",
-        "url": "http://sebstorm.dk/kea/2semester/design_in_browser/final_iteration/index.html",
+        "url": {
+            "url": "http://sebstorm.dk/kea/2semester/design_in_browser/final_iteration/index.html",
+            "text": "Gå til Verdenshjørnet"
+        },
         "stack": "HTML, Javascript & CSS",
         "purpose": "På 1. semester skulle vi lave et website hvis design skulle være friskt og nutidigt - men samtidigt trække på inspiration fra en kendt stilart. Designet skulle afspejle kundens/klientenens værdier, men også turde udfordre det eksisterende design. Designet skulle afspejle kundens tilhørsforhold til Nørrebro. En prototype af det redesignede website skal udvikles ved hjælp af Bootstrap. Her skulle vi vise vores grundlæggende kendskab i anvendelse af Bootstraps komplekse grid-system samt at skabe dynamik på siden ved hjælp af javascript/jQuery elementer. "
     },
@@ -38,9 +47,12 @@
         "title": "#MitFuckingValg",
         "splashImage": "valg.jpg",
         "education": "Multimediedesigner",
-        "weeks": 4,
+        "weeks": "4 uger",
         "thumbnail": "mitf_mikroani1.jpg",
-        "url": "http://www.sebstorm.dk/mitfuckingvalg/index.html",
+        "url": {
+            "url": "http://www.sebstorm.dk/mitfuckingvalg/index.html",
+            "text": "Gå til #MitFuckingValg"
+        },
         "stack": "HTML, Javascript & CSS",
         "purpose": "På 2. Semester skulle vi lave et website til de unge, hvor de kunne søge informationer til kommunalvalget. De unges valgdeltagelse har været ekstraordinært lav ved de seneste valg. Ved kommunal og regionsvalget i 2009 var det mere end hver anden i aldersgruppen 19-29 år, der ikke stemte til valget. Valgdeltagelsen ved valget i 2009 gjorde, at man for 12. år i træk havde en faldende valgdeltagelse blandt unge og forskellen på valgdeltagelsen mellem unge og ældre er blevet større.Konceptidéen går ud på at oplyse de unge på humoristisk måde. En oplysningskampagne. Det kan kaldes et “ungdoms-opråb”, da kampagnen skulle larme og vække opsigt hos målgruppen. I kampagnen tales der MED de unge i stedet for TIL de unge. På den måde bliver det en positiv opfordring til at stemme ved kommunal og regionsvalget i stedet for en løftet pegefinger."
     },
@@ -49,9 +61,12 @@
         "title": "Casual Games",
         "splashImage": "casualGames.jpg",
         "education": "Multimediedesigner",
-        "weeks": 3,
+        "weeks": "3 uger",
         "thumbnail": "casualGames_thumbnail.jpg",
-        "url": "https://sebstorm.dk/kea/3semester/casualGames/eksamensprojekt/index.html",
+        "url": {
+            "url": "https://sebstorm.dk/kea/3semester/casualGames/eksamensprojekt/index.html",
+            "text": "Gå til Casual Games"
+        },
         "stack": "Javascript & Canvas",
         "purpose": "På 3. semester i casual games skulle der laves en javascript spil ved hjælp af javascript biblioteket Canvas. Ud fra et kodeperspektiv var formålet at blive en haj til javascript. Det blev gjort ved en lidt atypisk måde ved at kode et spil, som både var interessant og sjovt at prøve. Derudover skulle der også tænke på stilarten af spillet. "
     },
@@ -60,9 +75,12 @@
         "title": "Artmoney",
         "splashImage": "artmoney.jpg",
         "education": "Multimediedesigner",
-        "weeks": 3,
+        "weeks": "3 uger",
         "thumbnail": "artmoney_thumbnail.jpg",
-        "url": "http://sebstorm.dk/artmoney/site/index.php",
+        "url": {
+            "url": "http://sebstorm.dk/artmoney/site/index.php",
+            "text": "Gå til Artmoney"
+        },
         "stack": "HTML, CSS & wordpress",
         "purpose": "På 3. semester skulle der udvikles et website for artmoney, hvor webløsning for artmoney.org skulle udvikles, designes og implementeres, så den formidler artmoney konceptet, dækker kunstnernes og brugernes behov. Formålet ud fra et kodeperspektiv var at bruge et af wordpress’s plugin som en database, som skulle holde på informationerne på kunstobjekterne. Det skulle derfor fungeres som en REST API  "
     },
@@ -71,9 +89,12 @@
         "title": "NKF",
         "splashImage": "NKF.jpg",
         "education": "Multimediedesigner",
-        "weeks": 4,
+        "weeks": "4 uger",
         "thumbnail": "NKF_thumbnail.jpg",
-        "url": "https://sebstorm.dk/NKF/fodboldspiller.html",
+        "url": {
+            "url": "https://sebstorm.dk/NKF/fodboldspiller.html",
+            "text": "Gå til NKF"
+        },
         "stack": "HTML, Javascript, CSS & Json",
         "purpose": "I mit afsluttende projekt på multimediedesigner valgte jeg at gå sammen med min barndoms fodboldklub Nivå Kokkedal fodbold for at lave et redesign af deres hjemmeside. Et redesign, hvor Nivå-Kokkedal-Fodboldklubs visuelle identitet og dens fællesskab kommer til udtryk. I dette projekt blev der brugte JSON som skulle fungere som en database, som skulle holde på de forskellige spillere. I den virkelige verden ville det ikke være en optimal løsning pga. GDPR men jeg fik først undervisning i databaser på Webudvikler uddannelsen"
     },
@@ -82,9 +103,12 @@
         "title": "Interface Design",
         "splashImage": "interface.jpg",
         "education": "Webudvikler",
-        "weeks": 3,
+        "weeks": "3 uger",
         "thumbnail": "interface_thumbnail.jpg",
-        "url": "https://sebstorm.dk/interface/home.php",
+        "url": {
+            "url": "https://sebstorm.dk/interface/home.php",
+            "text": "Gå til Interface Design"
+        },
         "stack": "HTML, Javascript & CSS",
         "purpose": "På 1.semester som Webudvikler havde vi et projekt hvor der var fokus på processen til at finde det rette UI og UX til en webapplikation. I slutningen af projektet skulle der være en tidlig prototype klar, som skulle kodes ved hjælp af HTML, CSS og javascript."
     },
@@ -93,9 +117,12 @@
         "title": "Web Security",
         "splashImage": "security.jpg",
         "education": "Webudvikler",
-        "weeks": 3,
+        "weeks": "3 uger",
         "thumbnail": "security_thumbnail.jpg",
-        "url": "https://sebstorm.dk/security/login.php",
+        "url": {
+            "url": "https://sebstorm.dk/security/login.php",
+            "text": "Gå til Web Security"
+        },
         "stack": "HTML, Javascript, CSS & PHP",
         "purpose": "På 2. semester som webudvikler havde jeg et valgfag, hvor der var fokus på sikkerheden på en webapplikation. Her skulle vi lærer hvordan man kunne beskytte sig mod Ddos, sql injection eller andre typer af angreb. Her var der ikke fokus på selve Interface design men mere hvordan man gør en webapplikation så sikkert som muligt. I slutningen af projektet skulle vi alle prøve at 'angrebe' hinandens løsninger."
     },
@@ -104,9 +131,12 @@
         "title": "Database",
         "splashImage": "database.jpg",
         "education": "Webudvikler",
-        "weeks": 3,
+        "weeks": "3 uger",
         "thumbnail": "database_thumbnail.jpg",
-        "url": "https://sebstorm.dk/frenzy/login.php",
+        "url": {
+            "url": "https://sebstorm.dk/frenzy/login.php",
+            "text": "Gå til Database projektet"
+        },
         "stack": "HTML, Javascript, CSS & PHP",
         "purpose": "På 1. semester som webudvikler skulle vi inkorporerer en database til projektets webløsning. Her var der fokus på hvordan man laver CRUD (Create, Read, Update & Delete) fra og til databasen. Sproget som blev brugt var MySQL. I dette projekt var der ikke fokus på Frontend."
     },
@@ -115,21 +145,45 @@
         "title": "NodeJS - Mandatory 1",
         "splashImage": "manda1NodeJS.jpg",
         "education": "Datamatiker",
-        "weeks": 1,
+        "weeks": "1 uge",
         "thumbnail": "manda1NodeJS_thumbnail.jpg",
-        "url": "https://mandatory1-nodejs.herokuapp.com/variables",
+        "url": {
+            "url": "https://mandatory1-nodejs.herokuapp.com/variables",
+            "text": "Gå til NodeJS - Mandatory 1"
+        },
         "stack": "NodeJS",
         "purpose": "I dette projekt skulle vi lave en dokumentation webapplikation på hvad vi havde lært indtil videre på NodeJS valgfaget. Her skulle vi bruge nodejs og der var fokus på at det skulle sættes pænt op"
     },
     {
         "id": 12,
-        "title": "Sex & Samfund",
-        "splashImage": "kyoto_billede_fullscreen.png",
+        "title": "Kommunalvalg",
+        "splashImage": "kommunalvalg.jpg",
         "education": "Datamatiker",
-        "weeks": 2,
-        "thumbnail": "kyoto_billede_fullscreen.png",
-        "url": "http://sebstorm.dk/kea/animation/animation_projekt/index.html",
-        "stack": "HTML, Javascript & CSS",
-        "purpose": ""
+        "weeks": "24 Timer",
+        "thumbnail": "kommunalvalg_thumbnail.jpg",
+        "url": {
+            "url": "https://github.com/Sebistorm/kommunalvalgBackend",
+            "text": "Github Backend"
+        },
+        "url2": {
+            "url": "https://github.com/Sebistorm/kommunalvalgFrontend",
+            "text": "Github Frontend"
+        },
+        "stack": "Java, HTML, CSS & Javascript",
+        "purpose": "Dette er mit eksamensprojekt for mit programmeringsfag på 3. Semester. Vi skulle kode et fullstack projekt på 24 timer. Her skulle vi bruge Spring/java som skulle fungerer som en REST API til vores frontend, som blev i HTML, CSS og javascript. Projektet var omkring det seneste kommunalvalg, hvor man skulle fokusere på en kommune."
+    },
+    {
+        "id": 13,
+        "title": "Car Rental",
+        "splashImage": "carrental.jpg",
+        "education": "Datamatiker",
+        "weeks": "3 uger",
+        "thumbnail": "carrental_thumbnail.jpg",
+        "url": {
+            "url": "https://github.com/Sebistorm/carrental",
+            "text": "Gå til Github"
+        },
+        "stack": "Java, HTML, CSS",
+        "purpose": "Dette er eksamensprojektet fra 2. Semester. Her fik vi en fiktiv kunde, som var en biludlejning forretning. Vi skulle lave en applikation til deres medarbejedere hvor de kunne registrere deres kunder, biler og booking af biler. Projektet skulle kodes i Spring frameworket, hvor der blev brugt Java, MySql Html & CSS."
     }
 ]
